fixed footer alignment, icons are now centered on the footer on smaller screens

--- a/src/components/Style/Footer.css
+++ b/src/components/Style/Footer.css
@@ -56,6 +56,7 @@
         margin-left: auto;
         margin-right: auto;
         justify-content: center;
+        padding-left: 0%;
     }
 
     .footer-list > li {
@@ -67,5 +68,11 @@
 
     .iconName {
         display: none;
+    }
+
+    .footer-icon {
+        margin-left: auto;
+        margin-right: auto;
+        padding: 0;
     }
 }
